<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_activity_creation"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/real_estate_creation"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_activity_modification"
        android:icon="@drawable/ic_baseline_create_24"
        android:title="@string/real_estate_modification"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_activity_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/real_estate_search"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

</menu>