<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/search_guide_line_half"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/type_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/type_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/real_estate_type" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/price_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="@id/search_guide_line_half"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/type_til">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/price_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/real_estate_price" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/surface_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/search_guide_line_half"
        app:layout_constraintTop_toBottomOf="@id/type_til">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surface_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/real_estate_surface" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/surface_til">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/real_estate_description" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/entry_date_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="@id/search_guide_line_half"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_til">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/entry_date_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/real_estate_entry_date" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/exit_date_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/search_guide_line_half"
        app:layout_constraintTop_toBottomOf="@id/description_til">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/exit_date_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/real_estate_exit_date" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/agent_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="@id/search_guide_line_half"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/entry_date_til">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/agent_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/real_estate_agent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/country_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/search_guide_line_half"
        app:layout_constraintTop_toBottomOf="@id/exit_date_til">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/country_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/real_estate_country" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/road_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="@id/search_guide_line_half"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/agent_til">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/road_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/real_estate_road" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/house_number_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/search_guide_line_half"
        app:layout_constraintTop_toBottomOf="@id/agent_til">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/house_number_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/real_estate_house_number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/town_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="@id/search_guide_line_half"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/road_til">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/town_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/real_estate_town" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/postal_code_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/search_guide_line_half"
        app:layout_constraintTop_toBottomOf="@id/house_number_til">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/postal_code_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/real_estate_postal_code" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/total_room_number_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toStartOf="@id/bedroom_number_til"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/town_til">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/total_room_number_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/real_estate_total_room_number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bedroom_number_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toStartOf="@id/bathroom_number_til"
        app:layout_constraintStart_toEndOf="@id/total_room_number_til"
        app:layout_constraintTop_toBottomOf="@id/town_til">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bedroom_number_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/real_estate_bedroom_number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bathroom_number_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bedroom_number_til"
        app:layout_constraintTop_toBottomOf="@id/town_til">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bathroom_number_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/real_estate_bathroom_number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/submit_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/photo_btn"
        app:layout_constraintTop_toBottomOf="@id/total_room_number_til"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/photo_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/photo_btn"
        app:layout_constraintEnd_toStartOf="@id/submit_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/total_room_number_til"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>